Fix head being randomly visible

--- a/pages/components/Header/header.module.css
+++ b/pages/components/Header/header.module.css
@@ -51,10 +51,11 @@
 }
 
 .mobileMenu {
+  visibility: hidden;
   display: flex;
   overflow: hidden;
   width: 100%;
-  transition: transform 0.7s cubic-bezier(0.84, -0.01, 0.59, 0.3);
+  transition: transform 0.7s cubic-bezier(0.84, -0.01, 0.59, 0.3), visibility 1s;
   flex-direction: column;
   transform: translateY(-100%);
   height: calc(100dvh - 6em - 2rem);
